# haskell-dicemaster

./: CHANGELOG.md  README.md  dicemaster.cabal
app/: Main.hs
