cabal-version:      3.0
name:               dicemaster
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             zfdavis
maintainer:         zfdavis21@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable dicemaster
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base             >= 4.14.3 && < 4.15,
        haskeline        >= 0.8.2 && < 0.9,
        transformers     >= 0.5.6 && < 0.6,
        random           >= 1.2.1 && < 1.3

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
